tests/ui/typeck/output-type-mismatch.rs
fn f() { }

fn main() { let i: isize; i = f(); } //~ ERROR mismatched types
